kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-matcher
  labels:
    app: resume-matcher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-matcher
  template:
    metadata:
      labels:
        app: resume-matcher
    spec:
      containers:
        - name: resume-matcher
          image: kaifmohammedkhan123/resume-matcher-devops
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
            - name: logs
              mountPath: /app/logs
            - name: config-volume
              mountPath: /app/config
              readOnly: true
            - name: secret-volume
              mountPath: /app/secrets
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: uploads
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: config-volume
          configMap:
            name: resume-config
        - name: secret-volume
          secret:
            secretName: db-secret
---
apiVersion: v1
kind: Service
metadata:
  name: resume-matcher-service
  labels:
    app: resume-matcher
spec:
  selector:
    app: resume-matcher
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
  type: NodePort
