kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-matcher-service
spec:
  selector:
    app: resume-matcher-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
